Update dcs launch scripts #1510